# sumo-experiments

./: .gitignore  AUTHORS.md  README.md  README.rst  codemeta.json  pyproject.toml  requirements.txt
core/src/: experiment.py
core/src/components/: __init__.py  additionals.py  detectors.py  flows.py  infrastructures.py  network.py  route.py
core/src/plot/: results_plotter.py
core/src/preset_networks/: __init__.py  double_crossroad.py  simple_crossroad.py  square_crossroad.py
core/src/util/: csv_converter.py
csv/: exp_carrefour_double_fully_connected.csv  exp_carrefour_double_tous_parametres_variables.csv  exp_carrefour_simple_tourner.csv  exp_plots.csv  exp_traci.csv  test_carrefour.csv
csv/parameters/: double_carrefour.csv  grille_2x2.csv  simple_carrefour.csv  test_densite_simple_carrefour.csv
csv/parameters/simple_carrefour/: heterogene1.csv  heterogene2.csv  homogene.csv
examples/: 1- Getting started.ipynb  2- Exports and plots.ipynb  2- Pre-set networks.ipynb  3- Experiments with variable flows.ipynb  3- Pre-set networks.ipynb  4- Custom networks.ipynb  4- Experiments with variable flows.ipynb  5- Custom networks.ipynb  5- Run experiments with TraCi.ipynb  6- Run experiments with TraCi.ipynb
experiments/experiences_PFE/: carrefour_simple_temps_egal.py
experiments/matrices_de_flux/: test_carrefour_simple_fully_connecte.py  test_detecteurs.py  test_double_carrefour_fully_connected.py  test_modification_flux.py  test_plots.py  test_reseau_carre.py  test_reseau_carre_random.py
experiments/pfe-bompard/: carrefour_simple_temps_egal.py  test_carrefour_simple_fully_connecte.py  test_detecteurs.py  test_double_carrefour_fully_connected.py  test_modification_flux.py  test_plots.py  test_reseau_carre.py  test_reseau_carre_random.py
experiments/pji-bompard-lernould/: carrefour_double_tous_parametres_variables.py  carrefour_simple_flux_variables_egaux_temps_fixe.py  carrefour_simple_flux_variables_par_temps_cycle.py  carrefour_simple_tourner_tous_parametres_variables.py  carrefour_simple_tous_parametres_variables.py
experiments/ratios/: carrefour_double_tous_parametres_variables.py  carrefour_simple_flux_variables_egaux_temps_fixe.py  carrefour_simple_flux_variables_par_temps_cycle.py  carrefour_simple_tourner_tous_parametres_variables.py  carrefour_simple_tous_parametres_variables.py
src/sumo_experiments/: __init__.py  experiment.py
src/sumo_experiments/agents/: __init__.py  acolight_agent.py  agent.py  analyticplus_agent.py  boolean_agent.py  fixed_time_agent.py  lqf_agent.py  max_pressure_agent.py  numerical_agent.py  rl_1_agent.py  rl_2_agent.py  sotl_agent.py
src/sumo_experiments/components/: detectors.py  flows.py  infrastructures.py
src/sumo_experiments/plot/: results_plotter.py
src/sumo_experiments/preset_networks/: __init__.py  artificial_preset_network.py  bologna_network.py  champs_elysees_network.py  double_crossroad.py  grid_network.py  intersection_network.py  lille_network.py  line_network.py  network.py  one_crossroad_network.py  simple_crossroad.py  square_crossroad.py  square_network.py
src/sumo_experiments/preset_networks/champs_elysees/: champs_elysees.net.xml  champs_elysees.rou.xml  champs_elysees_detectors.add.xml  compute_flows.py  detectors.out  run.sumocfg
src/sumo_experiments/preset_networks/lille/: exit_forbidden.txt  liste_entrees.txt  liste_sorties.txt  netconvert_command.txt  run.sumocfg  starting_edges_forbidden.txt
src/sumo_experiments/strategies/: DQN_strategy.py  __init__.py  acolight_strategy.py  actuated_strategy.py  all_RL1_strategy.py  all_RL2_strategy.py  all_acolight_strategy.py  all_boolean_strategy.py  all_fixed_time_strategy.py  all_lqf_strategy.py  all_max_pressure_strategy.py  all_numerical_strategy.py  all_sotl_strategy.py  analyticplus_strategy.py  fixedtime_strategy.py  intellilight_strategy.py  lqf_strategy.py  maddpg_strategy.py  maxpressure_strategy.py  scoot_strategy.py  sotl_strategy.py  strategy.py  transformerDQN_strategy.py
src/sumo_experiments/traci_util/: __init__.py  traci_functions.py  traci_wrapper.py
src/sumo_experiments/util/: __init__.py  csv_converter.py
sumo_experiments/: experiment.py
sumo_experiments/components/: __init__.py
sumo_experiments/plot/: __init__.py
sumo_experiments/preset_networks/: double_crossroad.py  simple_crossroad.py  square_crossroad.py
(+28 files in other folders)
