[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "sumo-experiments"
version = "1.0.8"
authors = [
    { name="Jules Bompard", email="jules.bompard.etu@univ-lille.fr" },
    { name="Antoine Nongaillard", email="antoine.nongaillard@univ-lille.fr"},
    { name="Philippe Mathieu", email="philippe.mathieu@univ-lille.fr"},
]
description = "The sumo-experiments library implements a python interface for the Simulation of Urban MObility (SUMO) software."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Gnome",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "contourpy >= 1.1.1, < 2",
    "cycler >= 0.12.1, < 1",
    "fonttools >= 4.43.1, < 5",
    "kiwisolver >= 1.4.5, < 2",
    "matplotlib >= 3.8.0, < 4",
    "numpy >= 1.26.0, < 2",
    "packaging >= 23.2, < 24",
    "pandas >= 2.1.1, < 3",
    "Pillow >= 10.0.1, < 11",
    "pyparsing >= 3.1.1, < 4",
    "python-dateutil >= 2.8.2, < 3",
    "pytz >= 2023.3.post1",
    "six >= 1.16.0, < 2",
    "sumolib >= 1.18.0, < 2",
    "traci >= 1.18.0, < 2",
    "tzdata >= 2023.3",
]

[project.urls]
"Homepage" = "https://github.com/cristal-smac/sumo-experiments"
"Bug Tracker" = "https://github.com/cristal-smac/sumo-experiments/issues"