[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "sumo-experiments"
version = "3.4.0"
authors = [
    { name="Jules Bompard", email="jules.bompard.etu@univ-lille.fr" },
    { name="Antoine Nongaillard", email="antoine.nongaillard@univ-lille.fr"},
    { name="Philippe Mathieu", email="philippe.mathieu@univ-lille.fr"},
]
description = "The sumo-experiments library implements a python interface for the Simulation of Urban MObility (SUMO) software."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Gnome",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "numpy >= 1.26.0, < 3",
    "pandas >= 2.1.1, < 3",
    "traci >= 1.18.0, < 2",
    "keras > 3, < 4",
    "tensorflow > 2, < 3",
    "networkx > 3.3, > 4"
]

[project.urls]
"Homepage" = "https://github.com/cristal-smac/sumo-experiments"
"Bug Tracker" = "https://github.com/cristal-smac/sumo-experiments/issues"